construcao dinâmica do footer e finalização do projeto

--- a/src/components/FlashCard/style.css
+++ b/src/components/FlashCard/style.css
@@ -81,3 +81,9 @@
 .Flashcard .finalizado .acerto {
   color: var(--cor-zap);
 }
+
+@media (min-width: 960px) {
+  .Flashcard .painel{
+    width: 100%;
+  }
+}
