--- a/src/components/TelaDeck/style.css
+++ b/src/components/TelaDeck/style.css
@@ -62,6 +62,28 @@
   text-align: center;
 }
 
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background: #f1f1f1;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #888;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+
 @media (min-width: 960px) {
   .Deck main{
     width: 60vw;
